# cgimpl

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/ycu/: opengl.h
lib/ycu/asset/: common.h  image.cpp  image.h  mesh.cpp  mesh.h
lib/ycu/d3d12/: app.cpp  app.h  buffer.h  descriptor_heap.h  macro.h
lib/ycu/event/: keyboard.cpp  keyboard.h
lib/ycu/math/: common.h  mat4.h  misc.h  vec3.h  vec4.h
lib/ycu/mesh/: mesh.cpp  mesh.h
lib/ycu/opengl/: buffer.cpp  buffer.h  camera.cpp  camera.h  common.cpp  common.h  cubetexture.cpp  cubetexture.h  framebuffer.cpp  framebuffer.h  meshrender.cpp  meshrender.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
lib/ycu/random/: random.cpp  random.h
lib/ycu/win32/: window.cpp  window.h
res/: cornell-box.mtl
src/: CMakeLists.txt
src/ibl/: 00_diffuse.cpp  01_specular.cpp
src/ssao/: 00_naive.cpp  01_hemisphere.cpp  02_rotate.cpp
src/ycu/: math.h
src/ycu/d3d12/: descriptor_heap.cpp
src/ycu/event/: event.h  keycode.h
src/ycu/log/: log.cpp  log.h
src/ycu/math/: common.h  mat4.h  vec2.h  vec3.h  vec4.h
src/ycu/mesh/: mesh.cpp  mesh.h
src/ycu/opengl/: buffer.cpp  camera.cpp  camera.h  common.h  meshrender.cpp  meshrender.h  shader.cpp  shader.h  window.cpp  window.h
test/: main.cpp
test/shader/: simple_frag.glsl  simple_vert.glsl
